Add endpoint to delete a circle
